--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blackroad-os-public-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "BlackRoad OS – Public API gateway service",
   "main": "dist/index.js",
   "scripts": {
@@ -10,7 +10,9 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
