--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -11,7 +11,9 @@ COPY app/ ./app/
 COPY schemas/ ./schemas/
 
 # Expose port
-EXPOSE 8000
+EXPOSE 8080
+
+ENV PORT=8080
 
 # Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
