--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.setup]
-nixPkgs = ['nodejs_20']
+nixPkgs = ["python312"]
 
 [phases.install]
-cmds = ['npm ci']
-
-[phases.build]
-cmds = ['npm run build']
+cmds = [
+  "python -m pip install --upgrade pip",
+  "pip install -r requirements.txt",
+]
 
 [start]
-cmd = 'npm start'
+cmd = 'uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}'
