--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,15 @@
 [phases.setup]
-nixPkgs = ["python312"]
+nixPkgs = ["nodejs_20"]
 
 [phases.install]
 cmds = [
-  "python -m pip install --upgrade pip",
-  "pip install -r requirements.txt",
+  "npm ci",
+]
+
+[phases.build]
+cmds = [
+  "npm run build",
 ]
 
 [start]
-cmd = 'uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}'
+cmd = "npm run start"
