--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "BlackRoad OS – Public API gateway service",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
