--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,19 +1,19 @@
-FROM python:3.12-slim
+FROM python:3.11-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
 
 WORKDIR /app
 
-# Copy requirements and install dependencies
-COPY infra/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy application code
-COPY app/ ./app/
-COPY schemas/ ./schemas/
+COPY . /app
 
-# Expose port
-EXPOSE 8080
+RUN pip install --no-cache-dir -r infra/requirements.txt
 
-ENV PORT=8080
+EXPOSE 8000
 
-# Run the application
-CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
