--- a/infra/railway.toml
+++ b/infra/railway.toml
@@ -1,13 +1,7 @@
-# Sample Railway.toml configuration
-# This is a sample configuration for deploying on Railway.app
-# For more details, visit: https://docs.railway.app/reference/config-as-code
-
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "infra/Dockerfile"
+builder = "NIXPACKS"
 
 [deploy]
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 healthcheckPath = "/health"
-healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
