--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ uvicorn[standard]>=0.30.0
 httpx>=0.27.0
 pydantic>=2.6.0
 pydantic-settings>=2.2.1
+slowapi>=0.1.9
+pyyaml>=6.0.2
+fastapi-code-generator>=0.5.4
