--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ fastapi = ">=0.115.0"
 uvicorn = {extras = ["standard"], version = ">=0.30.0"}
 httpx = ">=0.27.0"
 pydantic = ">=2.6.0"
+celery = ">=5.3.6"
 pydantic-settings = ">=2.2.1"
 slowapi = "^0.1.9"
 pyyaml = "^6.0.2"
